Fix waffle row gap

--- a/packages/waffle-chart/src/scss/waffle-chart.scss
+++ b/packages/waffle-chart/src/scss/waffle-chart.scss
@@ -202,7 +202,7 @@
       position: relative;
       border-radius: 0.25rem;
       flex-wrap: wrap;
-      gap: 0.5rem;
+      gap: 0.7rem;
     }
 
     .cdc-callout__icon {
@@ -318,7 +318,7 @@
       border: 1px solid var(--colors-cyan-15, #dff2f6);
       position: relative;
       border-radius: 0.25rem;
-      gap: 0.5rem;
+      gap: 0.7rem;
     }
 
     .cdc-callout__flag {
